--- a/polish-version-calisia-web/festival.css
+++ b/polish-version-calisia-web/festival.css
@@ -551,7 +551,7 @@ ul {
 }
 
 .margin-bez{
-    height: 200px!important;
+    height: 200px;
 }
 
 .margin-bez2{
@@ -665,7 +665,7 @@ ul {
     .konkursbox{
         height: 800px;
     }
-       .main3{
+       .main4{
         height: 300px!important ;
     }
     
@@ -689,18 +689,21 @@ ul {
         /* Ustawienie kafelków jeden pod drugim */
         gap: 20px;
         align-items: center;
-        margin-bottom: 30px;
+        margin-bottom: 60px;
         height: 200px;
         justify-content: flex-start;
 
+    }
+    .main-festiwal-new-new{
+        margin-bottom: 20px!important;
     }
 
     .main2{
         height: 300px;
     }
 
-    .main3{
-        height: 200px!important ;
+    .main4{
+        height: 300px!important ;
     }
     
     .deadline{
