--- a/festival.css
+++ b/festival.css
@@ -442,11 +442,11 @@ ul {
     width: 100%;
 }
 
-.program-text {
-    text-align: center !important;
+.program-text{
+    text-align: center!important;
 }
 
-.italic {
+.italic{
     font-style: italic;
     font-size: 16px;
     text-align: center;
@@ -461,12 +461,12 @@ ul {
     margin-right: auto;
 }
 
-.text2 {
+.text2{
     font-style: normal;
 }
 
 .gold {
-    color: #a48044;
+    color:#a48044;
     font-weight: 700;
 }
 
@@ -480,7 +480,7 @@ ul {
 }
 
 .main-festiwal {
-    height: 200px;
+    height: 300px;
     display: flex;
     justify-content: center;
 }
@@ -534,33 +534,31 @@ ul {
 
 
 .link2 {
-    color: #a48044 !important;
+    color: #a48044!important;
     cursor: pointer;
     transition: all 0.3s ease;
     font-weight: 800;
 }
 
-.link2:hover {
-
-    color: #a0a0a0 !important;
+.link2:hover{
+    
+    color: #a0a0a0!important;
     transform: scale(1.05);
 }
 
-.link2:visited {
+.link2:visited{
     color: #fff;
 }
 
-
-
-.margin-bez2 {
-    height: 100px !important;
+.margin-bez{
+    height: 200px;
 }
 
-.margin-bez3 {
-    height: 200px !important;
+.margin-bez2{
+    height: 100px!important;
 }
 
-.card2 {
+.card2{
     padding: 10px 5px;
 }
 
@@ -664,23 +662,18 @@ ul {
         width: 50%;
     }
 
-    .konkursbox {
+    .konkursbox{
         height: 800px;
     }
-
-    .margin-bez3 {
-        height: 10px !important;
+       .main4{
+        height: 300px!important ;
     }
 
-    .main3 {
-        height: 300px !important;
-    }
-
-    .padding-artysci {
+    .padding-artysci{
         padding-bottom: 10px;
         padding-top: 10px;
     }
-
+    
 }
 
 @media (max-width: 700px) {
@@ -696,52 +689,42 @@ ul {
         width: 80%;
     }
 
-    .margin-bez {
-        height: 500px !important;
-        margin-bottom: 30px;
-    }
-
-    .main-festiwal-new-new {
-        margin-bottom: 20px !important;
-    }
-
-
-
     .main-festiwal {
         flex-direction: column;
         /* Ustawienie kafelków jeden pod drugim */
         gap: 20px;
         align-items: center;
-        margin-bottom: 10px !important;
-        height: 400px;
+        margin-bottom: 60px;
+        height: 200px;
         justify-content: flex-start;
 
     }
 
-    .festiwale-dol{
-        height: 300px !important;
+    .margin-special-group{
+        margin-bottom: 130px!important;
     }
+ 
 
-    .margin-bez3 {
-        height: 10px !important;
-    }
-
-    .main2 {
+    .main2{
         height: 300px;
     }
 
-
-    .deadline {
+    .main4{
+        height: 300px!important ;
+    }
+    
+    .deadline{
         margin-top: 120px;
     }
 
-    .container-text-photos2 {}
+    .container-text-photos2{
+        margin-top: 230px;
+    }
 
-    .program-mobile {
+    .program-mobile{
         font-size: 13px;
     }
 }
-
 @media (max-width: 600px) {
     .hamburger-list {
         width: 300px;
@@ -800,7 +783,7 @@ ul {
         height: 200px;
     }
 
-    .program-mobile {
+    .program-mobile{
         font-size: 11px;
     }
 
